--- a/scrappers/scrapy.cfg
+++ b/scrappers/scrapy.cfg
@@ -9,3 +9,8 @@ default = precio_scrapers.settings
 [deploy]
 #url = http://localhost:6800/
 project = scrappers
+
+#.\source\Scripts\python.exe -m uvicorn main:app --reload para iniciar el servidor   
+#.\source\Scripts\scrapy.exe crawl precio_scrapers para iniciar el scrapper
+# Si ya estás en SuperMercados\scrappers
+#scrapy crawl carulla -o productos.json para iniciar el scrapper
